cfortran (4.4-14) unstable; urgency=low

  *  Add license text to cfortran.h (Closes: #507429).

 --  Bastien ROUCARIÈS <roucaries.bastien+debian@gmail.com>  Wed, 14 Oct 2009 14:56:50 +0200

cfortran (4.4-13) unstable; urgency=low

  * Bump Standards-Version to 3.8.0 (no changes).
  * Make the default behavior on CYGWIN, Linux (with gcc) and OS X be to
    assume gfortran (rather than g77/f2c) if the FORTRAN compiler has
    otherwise been left unspecified.  Thanks Davide Mancusi for the prod.
  * Fix a buffer overrun bug found by Jean-Guillaume Piccinali in one of
    the example programs (fd/fd.c).  (Closes: #489886.)

 -- Kevin B. McCarty <kmccarty@debian.org>  Tue, 26 Aug 2008 20:55:16 -0700

cfortran (4.4-12) unstable; urgency=low

  * Bump Standards-Version to 3.7.3 (no changes).
  * Restore commented-out "extern" in COMMON_BLOCK_DEF() macro, by
    request of Jacek Holeczek <jacek.m.holeczek@gmail.com>.
    N.B. This will cause "paw" source package to FTBFS due to a
    Debian-specific patch to paw, so I will upload a fix for that shortly.
  * Add {} around lone ";" in three empty "while" bodies to get rid of
    spurious compiler warnings with recent gcc.  Thanks to Rene Brun
    <Rene.Brun@cern.ch>.
  * Change package recommends from g77 to gfortran.
  * Add README.Debian to mention that most people using gfortran will want
    to use -DgFortran (those using g77 will want to keep using -Dg77Fortran
    or -Df2cFortran) and to discuss the differences.

 -- Kevin B. McCarty <kmccarty@debian.org>  Wed, 14 May 2008 09:07:09 -0700

cfortran (4.4-11) unstable; urgency=low

  * Bump Standards-Version to 3.7.2 (no changes).
  * Build-Depends: debhelper (instead of Build-Depends-Indep) to fix
    Lintian error.

 -- Kevin B. McCarty <kmccarty@debian.org>  Mon, 27 Nov 2006 09:16:31 -0500

cfortran (4.4-10) unstable; urgency=low

  * Add modifications so that gfortran (and g77 with -fno-f2c flag) are